frontend/test/should_fail/storages.grg
using storages;

test getIndexArrayNN(ref a:array<NN>, item:Node) : (int)
{
	return(a.indexOf(item));
}
